mensajeria-dev/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:50:37Z"
    labels:
      app: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisional
    namespace: mensajeria-dev
    resourceVersion: "6264207"
    uid: 8f149fa1-16b0-46b1-98a0-067ad5b702d4
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:50:37Z"
    labels:
      app: laboralprevisionalbckgrd
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisionalbckgrd
    namespace: mensajeria-dev
    resourceVersion: "6264210"
    uid: 1bf29772-495f-436d-be73-c478c7e89ff6
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-05-18T20:50:37Z"
    labels:
      app: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: labprev-cumplimiento
    namespace: mensajeria-dev
    resourceVersion: "6264215"
    uid: 822826fc-30f1-4434-9d3d-5e5a2c4c50d3
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
