mensajeria-dev/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:50:39Z"
    generateName: laboralprevisional-
    generation: 1
    labels:
      app: laboralprevisional
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisional-9wcxf
    namespace: mensajeria-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: laboralprevisional
      uid: d0530a7d-885b-4767-8de4-3248e6fbf143
    resourceVersion: "476054047"
    uid: a16b53d9-642c-49d6-bae8-75d50c79ce25
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:50:39Z"
    generateName: laboralprevisionalbckgrd-
    generation: 1
    labels:
      app: laboralprevisionalbckgrd
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: laboralprevisionalbckgrd
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisionalbckgrd-k6279
    namespace: mensajeria-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: laboralprevisionalbckgrd
      uid: 7e70f656-f728-4d8a-927f-0a8123fcffcf
    resourceVersion: "476054080"
    uid: 958f70bc-2890-4813-a350-050cf883c5ce
  ports: null
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints: null
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-05-18T20:50:39Z"
    generateName: labprev-cumplimiento-
    generation: 1
    labels:
      app: labprev-cumplimiento
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: labprev-cumplimiento-lgmn2
    namespace: mensajeria-dev
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: labprev-cumplimiento
      uid: dc7ff4b9-08b5-4b58-8467-4c48f0738308
    resourceVersion: "476054017"
    uid: 1bc162cd-0039-4898-8fa3-2ce566109e22
  ports: null
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
