mensajeria-dev/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T20:50:39Z"
    labels:
      app: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisional
    namespace: mensajeria-dev
    resourceVersion: "22594043"
    uid: 4fe9e270-e9a2-4aa2-b82c-f0b4c9567185
  spec:
    host: laboralprevisional-mensajeria-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: laboralprevisional
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:05:13Z"
        status: "True"
        type: Admitted
      host: laboralprevisional-mensajeria-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T20:50:39Z"
    labels:
      app: laboralprevisionalbckgrd
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisionalbckgrd
    namespace: mensajeria-dev
    resourceVersion: "22594210"
    uid: ae2f4ca7-eed7-4dba-bb50-5cbf73c58155
  spec:
    host: laboralprevisionalbckgrd-mensajeria-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: laboralprevisionalbckgrd
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:05:30Z"
        status: "True"
        type: Admitted
      host: laboralprevisionalbckgrd-mensajeria-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-18T20:50:39Z"
    labels:
      app: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: labprev-cumplimiento
    namespace: mensajeria-dev
    resourceVersion: "22594362"
    uid: 54723853-0c83-443c-8b0c-b9fa5b3b0049
  spec:
    host: labprev-cumplimiento-mensajeria-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: labprev-cumplimiento
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-06-07T16:05:46Z"
        status: "True"
        type: Admitted
      host: labprev-cumplimiento-mensajeria-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
