mensajeria-dev/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:50:39Z"
    labels:
      app: laboralprevisional
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisional
    namespace: mensajeria-dev
    resourceVersion: "6264270"
    uid: d0530a7d-885b-4767-8de4-3248e6fbf143
  spec:
    clusterIP: 172.30.57.197
    clusterIPs:
    - 172.30.57.197
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: laboralprevisional
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:50:39Z"
    labels:
      app: laboralprevisionalbckgrd
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: laboralprevisionalbckgrd
    namespace: mensajeria-dev
    resourceVersion: "6264272"
    uid: 7e70f656-f728-4d8a-927f-0a8123fcffcf
  spec:
    clusterIP: 172.30.118.30
    clusterIPs:
    - 172.30.118.30
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: laboralprevisionalbckgrd
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-18T20:50:39Z"
    labels:
      app: labprev-cumplimiento
      migration.openshift.io/migrated-by-migmigration: 686e45c7-2384-4caa-8724-f04595ea56af
      migration.openshift.io/migrated-by-migplan: 14f4ea15-0112-44f6-b444-b2d822f4eda7
      velero.io/backup-name: migration-2013d-initial-qtt4p
      velero.io/restore-name: migration-2013d-final-7v8hk
    name: labprev-cumplimiento
    namespace: mensajeria-dev
    resourceVersion: "6264274"
    uid: dc7ff4b9-08b5-4b58-8467-4c48f0738308
  spec:
    clusterIP: 172.30.159.94
    clusterIPs:
    - 172.30.159.94
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: labprev-cumplimiento
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
